@@ -10,6 +10,7 @@ USER LEVEL CHANGES
 
 BUG FIXES
 
+-- Fixed a bug in k-fold cross-validation routine (`runCrossValidate`), where the merging of MCMC sampler configurations was done incorrectly.
 -- Updated all MCMC sampler functions to use a new syntax for control list element extraction, which prevents a possible caused by R's partial matching of list names.
 
                             CHANGES IN VERSION 0.9.1 (May 2020)
